// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton Component - An icon with onClick handler renders with icon join props (snapshot) 1`] = `
<svg
  align="right"
  aria-hidden={true}
  className="MuiSvgIcon-root makeStyles-icons-3"
  focusable="false"
  onClick={[Function]}
  viewBox="0 0 24 24"
>
  <path
    d="M21.58 16.09l-1.09-7.66C20.21 6.46 18.52 5 16.53 5H7.47C5.48 5 3.79 6.46 3.51 8.43l-1.09 7.66C2.2 17.63 3.39 19 4.94 19c.68 0 1.32-.27 1.8-.75L9 16h6l2.25 2.25c.48.48 1.13.75 1.8.75 1.56 0 2.75-1.37 2.53-2.91zM11 11H9v2H8v-2H6v-1h2V8h1v2h2v1zm4-1c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm2 3c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
  />
</svg>
`;

exports[`IconButton Component - An icon with onClick handler renders with minimal props (snapshot) 1`] = `
<svg
  align="right"
  aria-hidden={true}
  className="MuiSvgIcon-root makeStyles-icons-3"
  focusable="false"
  onClick={[Function]}
  viewBox="0 0 24 24"
>
  <path
    d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
  />
</svg>
`;

exports[`IconButton Component - An icon with onClick handler renders with provided onClick handler (snapshot) 1`] = `
<svg
  align="right"
  aria-hidden={true}
  className="MuiSvgIcon-root makeStyles-icons-3"
  focusable="false"
  onClick={[MockFunction]}
  viewBox="0 0 24 24"
>
  <path
    d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
  />
</svg>
`;

exports[`IconButton Component - An icon with onClick handler renders with provided onClick handler and icon join(snapshot) 1`] = `
<svg
  align="right"
  aria-hidden={true}
  className="MuiSvgIcon-root makeStyles-icons-3"
  focusable="false"
  onClick={[MockFunction]}
  viewBox="0 0 24 24"
>
  <path
    d="M21.58 16.09l-1.09-7.66C20.21 6.46 18.52 5 16.53 5H7.47C5.48 5 3.79 6.46 3.51 8.43l-1.09 7.66C2.2 17.63 3.39 19 4.94 19c.68 0 1.32-.27 1.8-.75L9 16h6l2.25 2.25c.48.48 1.13.75 1.8.75 1.56 0 2.75-1.37 2.53-2.91zM11 11H9v2H8v-2H6v-1h2V8h1v2h2v1zm4-1c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm2 3c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
  />
</svg>
`;

exports[`StyledHeader Component renders with join button and provided onClick handler (snapshot) 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionRelative MuiAppBar-colorPrimary MuiPaper-elevation4"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root makeStyles-icon-1"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
      />
    </svg>
    <h6
      className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-noWrap"
    >
      BigBrain
    </h6>
    <div
      className="makeStyles-logout-2"
      color="inherit"
    >
      <svg
        align="right"
        aria-hidden={true}
        className="MuiSvgIcon-root makeStyles-icons-3"
        focusable="false"
        onClick={[MockFunction]}
        viewBox="0 0 24 24"
      >
        <path
          d="M21.58 16.09l-1.09-7.66C20.21 6.46 18.52 5 16.53 5H7.47C5.48 5 3.79 6.46 3.51 8.43l-1.09 7.66C2.2 17.63 3.39 19 4.94 19c.68 0 1.32-.27 1.8-.75L9 16h6l2.25 2.25c.48.48 1.13.75 1.8.75 1.56 0 2.75-1.37 2.53-2.91zM11 11H9v2H8v-2H6v-1h2V8h1v2h2v1zm4-1c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm2 3c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
        />
      </svg>
      <svg
        align="right"
        aria-hidden={true}
        className="MuiSvgIcon-root makeStyles-icons-3"
        focusable="false"
        onClick={[MockFunction]}
        viewBox="0 0 24 24"
      >
        <path
          d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
    </div>
  </div>
</header>
`;

exports[`StyledHeader Component renders with minimal props which has one logout button(snapshot) 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionRelative MuiAppBar-colorPrimary MuiPaper-elevation4"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root makeStyles-icon-1"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
      />
    </svg>
    <h6
      className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-noWrap"
    >
      BigBrain
    </h6>
    <div
      className="makeStyles-logout-2"
      color="inherit"
    >
      <svg
        align="right"
        aria-hidden={true}
        className="MuiSvgIcon-root makeStyles-icons-3"
        focusable="false"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M21.58 16.09l-1.09-7.66C20.21 6.46 18.52 5 16.53 5H7.47C5.48 5 3.79 6.46 3.51 8.43l-1.09 7.66C2.2 17.63 3.39 19 4.94 19c.68 0 1.32-.27 1.8-.75L9 16h6l2.25 2.25c.48.48 1.13.75 1.8.75 1.56 0 2.75-1.37 2.53-2.91zM11 11H9v2H8v-2H6v-1h2V8h1v2h2v1zm4-1c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm2 3c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
        />
      </svg>
      <svg
        align="right"
        aria-hidden={true}
        className="MuiSvgIcon-root makeStyles-icons-3"
        focusable="false"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
    </div>
  </div>
</header>
`;

exports[`StyledHeader Component renders with provided onClick handler (snapshot) 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionRelative MuiAppBar-colorPrimary MuiPaper-elevation4"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root makeStyles-icon-1"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
      />
    </svg>
    <h6
      className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-noWrap"
    >
      BigBrain
    </h6>
    <div
      className="makeStyles-logout-2"
      color="inherit"
    >
      <svg
        align="right"
        aria-hidden={true}
        className="MuiSvgIcon-root makeStyles-icons-3"
        focusable="false"
        onClick={[MockFunction]}
        viewBox="0 0 24 24"
      >
        <path
          d="M21.58 16.09l-1.09-7.66C20.21 6.46 18.52 5 16.53 5H7.47C5.48 5 3.79 6.46 3.51 8.43l-1.09 7.66C2.2 17.63 3.39 19 4.94 19c.68 0 1.32-.27 1.8-.75L9 16h6l2.25 2.25c.48.48 1.13.75 1.8.75 1.56 0 2.75-1.37 2.53-2.91zM11 11H9v2H8v-2H6v-1h2V8h1v2h2v1zm4-1c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm2 3c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
        />
      </svg>
      <svg
        align="right"
        aria-hidden={true}
        className="MuiSvgIcon-root makeStyles-icons-3"
        focusable="false"
        onClick={[MockFunction]}
        viewBox="0 0 24 24"
      >
        <path
          d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
    </div>
  </div>
</header>
`;
